kubernetes/jampage/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jampage
  namespace: jampage
  labels:
    app: jampage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jampage
  template:
    metadata:
      labels:
        app: jampage
    spec:
      containers:
        - name: jampage
          image: ghcr.io/gethomepage/homepage:v2.4.0
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: writable-next
              mountPath: /app/.next
            - name: config-dir
              mountPath: /app/config
      volumes:
        - name: writable-next
          emptyDir: {}
        - name: config-dir
          emptyDir: {}
        - name: config-bookmarks
          configMap:
            name: jampage-bookmarks
        - name: config-services
          configMap:
            name: jampage-services
        - name: config-widgets
          configMap:
            name: jampage-widgets
        - name: config-settings
          configMap:
            name: jampage-settings
