kubernetes/jampage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jampage
  namespace: jampage
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: jampage
